Re upload with all questions

--- a/DataStructure.ipynb
+++ b/DataStructure.ipynb
@@ -2,16 +2,100 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "dg9DzyWVKELi"
-      },
+      "metadata": {},
+      "source": [
+        "Theoritical Question and Answers"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. What are data structures, and why are they important?\n",
+        "- Ans. Data structures are like containers that help store, organize, and manipulate data efficiently,\n",
+        "data structures are important because they make it easier to perform tasks like searching, sorting, and\n",
+        "updating data.\n",
+        "2. Explain the difference between mutable and immutable data types with examples.\n",
+        "- Ans. Mutable data types are those data structures that can be assigned another value or may be\n",
+        "changed, example list, on the other hand immutable data types are those which can’t be changed at later\n",
+        "stage, once value is defined it can not be changed, example tuple.\n",
+        "3. What are the main differences between lists and tuples in Python?\n",
+        "- Ans. Lists are mutable, meaning their elements can be changed, while tuples are immutable and\n",
+        "cannot be changed after creation. Lists use square brackets “[ ]”, and tuples use parentheses “( )”.\n",
+        "Tuples are used when the data should stay constant like employee id in a company.\n",
+        "4. Describe how dic􀆟onaries store data.\n",
+        "- Ans. Dictionaries store data as key-value pairs. Each item has a key (like a name or label) and a value\n",
+        "(the data). Keys must be unique, and they help to find values quickly.\n",
+        "5. Why might you use a set instead of a list in Python?\n",
+        "- Ans. We might use a set instead of a list when we want to store only unique values and don't care\n",
+        "about the order. Sets automatically remove duplicates.\n",
+        "6. What is a string in Python, and how is it different from a list?\n",
+        "- Ans. A string in Python is a sequence of characters, like words or sentences, enclosed in quotes. It is\n",
+        "immutable, meaning it can't be changed after creation. A list, on the other hand, is a collection of\n",
+        "items (which can be numbers, strings, etc.) and is mutable, so you can change its contents later.\n",
+        "7. How do tuples ensure data integrity in Python?\n",
+        "- Ans. Tuples ensure data integrity in Python because they are immutable, means the data stays safe\n",
+        "and unchanged throughout the program, which is useful when you want to protect important\n",
+        "information like employee ID inside a company database.\n",
+        "8. What is a hash table, and how does it relate to dic􀆟onaries in Python?\n",
+        "- Ans. A hash table is a data structure that stores data using key-value pairs, where each key is\n",
+        "converted into a unique hash code for fast access. In Python, dictionaries are built using hash tables.\n",
+        "This means when we use a dictionary, Python is actually using a hash table in the background to\n",
+        "quickly find and store values. So, using a dictionary in Python is basically the same as using a hash\n",
+        "table.\n",
+        "9. Can lists contain different data types in Python?\n",
+        "- Ans. Yes, lists in Python can contain different data types. Such lists are called heterogeneous lists.\n",
+        "Name: Abhishek.\n",
+        "Page | 2\n",
+        "10. Explain why strings are immutable in Python.\n",
+        "- Ans. Strings are immutable in Python because their characters cannot be changed once the string is\n",
+        "created. This helps Python save memory and makes string handling safer and more efficient,\n",
+        "especially when used in loops or as keys in dictionaries.\n",
+        "11. What advantages do dic􀆟onaries offer over lists for certain tasks?\n",
+        "- Ans. Dictionaries are better than lists when we need to store data using unique keys and access values\n",
+        "quickly. They allow faster lookups, make the code more readable, and are ideal for tasks where keyvalue\n",
+        "pairs are needed.\n",
+        "12. Describe a scenario where using a tuple would be preferable over a list.\n",
+        "- Ans. A tuple is preferable over a list when you want to store data that should not change. For example,\n",
+        "employee ID in a company.\n",
+        "13. How do sets handle duplicate values in Python?\n",
+        "- Ans. Sets automatically remove duplicate values and only keep unique items. If we try to add\n",
+        "duplicates, the set ignores them.\n",
+        "14. How does the \"in\" keyword work differently for lists and dic􀆟onaries?\n",
+        "- Ans. For lists, the in-keyword checks if a value exists anywhere in the list. For dictionaries, in checks\n",
+        "if the key exists in the dictionary (not the values).\n",
+        "15. Can you modify the elements of a tuple? Explain why or why not.\n",
+        "- Ans. Elements of a tuple cannot be changed because tuples are immutable. After creation, you cannot\n",
+        "update, add, or remove values from a tuple.\n",
+        "16. What is a nested dic􀆟onary, and give an example of its use case?\n",
+        "- Ans. A nested dictionary is a dictionary inside another dictionary. It helps organize complex data by\n",
+        "grouping related information together.\n",
+        "17. Describe the 􀆟me complexity of accessing elements in a dic􀆟onary.\n",
+        "- Ans. Accessing elements in a dictionary is very fast, usually taking constant time called O(1) time\n",
+        "complexity.\n",
+        "This means no matter how big the dictionary is, it takes roughly the same amount of time to find a\n",
+        "value by its key.\n",
+        "18. In what situa􀆟ons are lists preferred over dic􀆟onaries?\n",
+        "- Ans. Storing a list of student names in the order they registered.\n",
+        "Keeping track of steps in a recipe.\n",
+        "19. Why are dic􀆟onaries considered unordered, and how does that affect data retrieval?\n",
+        "- Ans. You access data by keys, not by position, so the order does not matter for getting values.\n",
+        "20. Explain the difference between a list and a dic􀆟onary in terms of data retrieval.\n",
+        "- Ans. In a list, you retrieve data by using an index (a number indicating position).\n",
+        "In a dictionary, you retrieve data by using a key (which can be a number, string, or other immutable\n",
+        "type)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "PRACTICAL ANSWERS."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -23,14 +107,11 @@
       "outputs": [
         {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
-              "'Your Name'"
+              "'Abhishek'"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -38,7 +119,7 @@
       "source": [
         "# 1.  Write a code to create a string with your name and print\n",
         "\n",
-        "my_name = \"Your Name\"\n",
+        "my_name = \"Abhishek\"\n",
         "my_name\n"
       ]
     },
@@ -752,7 +833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -796,7 +877,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -834,7 +915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -878,7 +959,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
